<resources>
    <string name="app_name">Inventory Management</string>

    <string name="text_drawer_admin">Admin</string>
    <string name="text_drawer_issue">Issue</string>
    <string name="text_drawer_settings">Settings</string>

    <string name="text_admin_dashboard">Dashboard</string>
    <string name="text_admin_item">Supplies</string>
    <string name="text_admin_employee">Employees</string>
    <string name="text_admin_report">Reports</string>
    <string name="text_admin_request">Requests</string>

    <string name="text_image_camera">Camera</string>
    <string name="text_image_gallery">Gallery</string>

    <string name="text_menu_search">Search</string>
    <string name="text_menu_save">Save</string>
    <string name="text_menu_barcode">Barcode</string>

    <string name="text_label_item">Items</string>
    <string name="text_label_add_item">Add Item</string>
    <string name="text_label_employee">Employees</string>
    <string name="text_label_add_employee">Add Employee</string>
    <string name="text_label_reports">Reports</string>
    <string name="text_label_supply">Get Item</string>
    <string name="text_label_receive">Receive Supply</string>

    <string name="text_item_quantity">Remaining Items</string>
    <string name="text_item_price">Total Price</string>

    <string name="hint_item_name">Name</string>
    <string name="hint_item_barcode">Barcode</string>
    <string name="hint_item_description">Description</string>
    <string name="hint_item_quantity">Quantity</string>
    <string name="hint_item_notice">Low Item</string>
    <string name="hint_item_price">Price</string>

    <string name="hint_employee_id">Employee Number</string>
    <string name="hint_employee_firstname">First Name</string>
    <string name="hint_employee_lastname">Last Name</string>
    <string name="hint_employee_jobtitle">Job Title</string>
    <string name="hint_employee_admin">Admin</string>

    <string name="hint_issue_search">Search item</string>
    <string name="hint_issue_employee">Select employee</string>

    <string name="hint_receive_quantity">Received Quantity</string>

    <string-array name="text_department_array">
        <item>Management</item>
        <item>Accounting and Finance</item>
        <item>Human Resources</item>
        <item>Marketing</item>
        <item>IT Operations</item>
    </string-array>
</resources>
